[package]
name = "reset"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "svg"] }
oxiced = { git = "https://github.com/Xetibo/oxiced", branch = "dashie" }
zbus = "5.3.1"
#re_set-lib = "5.2.5"
re_set-lib = { git = "https://github.com/Xetibo/ReSet-Lib", branch = "dashie-2" }
reset_daemon = { git = "https://github.com/Xetibo/ReSet-Daemon", branch = "dashie-2" }
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.217"
tap = "1.0.1"
num-traits = "0.2.19"
enum_stringify = "0.6.1"
#TODO beforepr add reset lib

#[dependencies.libcosmic]
#git = "https://github.com/pop-os/libcosmic.git"
#features = [
#	"a11y",
#	"dbus-config",
#	"multi-window",
#	"single-instance",
#	"tokio",
#	"winit",
#	"wayland",
#	"wgpu",
#]
